--- a/source/app/assets/stylesheets/charges.css.scss
+++ b/source/app/assets/stylesheets/charges.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the charges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+th, td {
+  text-align: left;
+  padding: 5px;
+}
+
+#failed td {
+  background: #FF0000;
+}
+
+#disputed td {
+  background: #FF5400;
+}
+
