--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,17 +1,25 @@
-<h1>Listing charges</h1>
+<%= link_to 'New Charge', new_charge_path %>
 
+<br>
+
+<h1>Failed Charges</h1>
 <table>
   <thead>
     <tr>
+      <th>Customer Name</th>
+      <th>Amount</th>
+      <th>Date</th>
       <th></th>
       <th></th>
       <th></th>
     </tr>
   </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
+  <tbody class="fail">
+    <% @failed_charges.each do |charge| %>
       <tr>
+        <td><%= charge.customer.first_name + " " + charge.customer.last_name %></td>
+        <td><%= charge.amount %></td>
+        <td><%= charge.created %></td>
         <td><%= link_to 'Show', charge %></td>
         <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
         <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -20,6 +28,56 @@
   </tbody>
 </table>
 
-<br>
+<br />
+<h1>Disputed Charges</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Customer Name</th>
+      <th>Amount</th>
+      <th>Date</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody class="disput">
+    <% @disputed_charges.each do |charge| %>
+      <tr>
+        <td><%= charge.customer.first_name + " " + charge.customer.last_name %></td>
+        <td><%= charge.amount %></td>
+        <td><%= charge.created %></td>
+        <td><%= link_to 'Show', charge %></td>
+        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
+        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<%= link_to 'New Charge', new_charge_path %>
+<br />
+<h1>Successful Charges</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Customer Name</th>
+      <th>Amount</th>
+      <th>Date</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody class="success">
+    <% @successful_charges.each do |charge| %>
+      <tr>
+        <td><%= charge.customer.first_name + " " + charge.customer.last_name %></td>
+        <td><%= charge.amount %></td>
+        <td><%= charge.created %></td>
+        <td><%= link_to 'Show', charge %></td>
+        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
+        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
