--- a/source/app/assets/stylesheets/application.css
+++ b/source/app/assets/stylesheets/application.css
@@ -11,3 +11,15 @@
  *= require_self
  *= require_tree .
  */
+
+
+body .wrapper {
+	width: 80%;
+	max-width: 600px;
+	margin: 0 auto;}
+	body .wrapper table {
+		font-size: 16px;
+		width: 100%;}
+		body .wrapper table td {
+			padding: 2px 5px;
+			font-size: 16px;}
