--- a/source/app/views/credit_card_operations/charges.html.erb
+++ b/source/app/views/credit_card_operations/charges.html.erb
@@ -5,7 +5,7 @@
 <%= render "list", operations: @disputed_operations, row_class: 'disputed' %>
 
 <h1>Successful Charges</h1>
-<%= render "list", operations: @successful_operations, row_class: '' %>
+<%= render "list", operations: @successful_operations, row_class: 'successful' %>
 
 <br>
 
