--- a/source/app/assets/stylesheets/credit_card_operations.css.scss
+++ b/source/app/assets/stylesheets/credit_card_operations.css.scss
@@ -2,10 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.failed {
+ul.failed li {
   background-color: #FF0000;
 }
 
-.disputed {
+ul.disputed li {
   background-color: #FF5400;
 }
