--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,33 +1,3 @@
-<h1>Listing charges</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Paid</th>
-      <th>Refunded</th>
-      <th>Customer</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.paid %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer_id %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Charge', new_charge_path %>
+<%= render 'charges', charges: @failed_charges, list_class: 'failed', title: 'Failed Charges' %>
+<%= render 'charges', charges: @disputed_charges, list_class: 'disputed', title: 'Failed Charges' %>
+<%= render 'charges', charges: @successful_charges, list_class: 'successful', title: 'Successful Charges' %>
