--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,35 +1,53 @@
-<h1>Listing charges</h1>
-
-<table>
-  <thead>
+<h1>Failed Charges </h1>
+<table class="table" id="charges_failed">
     <tr>
-      <th>Created</th>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
       <th>Customer</th>
+      <th>Charge Amount</th>
+      <th>Date Failed</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.created %></td>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer_id %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% @charges_failed.each do |charge| %>
+      <tr bgcolor="#FF0000">
+        <td><%= charge.formatted_customer_name %></td>
+        <td><%= number_to_currency(charge.amount.to_s) %></td>
+        <td><%= charge.created_at.strftime("%d/%m/%Y") %></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
-
+  </table>
+<br>
+<h1>Disputed Charges </h1>
+<table class="table" id="charges_disputed">
+    <tr>
+      <th>Customer</th>
+      <th>Charge Amount</th>
+      <th>Date Failed</th>
+      <th colspan="3"></th>
+    </tr>
+    <% @charges_disputed.each do |charge| %>
+      <tr bgcolor="#FF5400">
+        <td><%= charge.formatted_customer_name %></td>
+        <td><%= number_to_currency(charge.amount.to_s) %></td>
+        <td><%= charge.created_at.strftime("%d/%m/%Y") %></td>
+      </tr>
+    <% end %>
+  </table>
 <br>
 
-<%= link_to 'New Charge', new_charge_path %>
+<h1>Successful Charges </h1>
+<table class="table" id="charges_success">
+    <tr>
+      <th>Customer</th>
+      <th>Charge Amount</th>
+      <th>Date Failed</th>
+      <th colspan="3"></th>
+    </tr>
+    <% @charges_success.each do |charge| %>
+      <tr>
+        <td><%= charge.formatted_customer_name %></td>
+        <td><%= number_to_currency(charge.amount.to_s) %></td>
+        <td><%= charge.created_at.strftime("%d/%m/%Y") %></td>
+      </tr>
+    <% end %>
+  </table>
+<br>
+
