--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,35 +1,67 @@
-<h1>Listing charges</h1>
+<h1>Failed Charges</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Created</th>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
+      <th>Charge</th>
       <th>Customer</th>
-      <th colspan="3"></th>
+      <th>Amount</th>
+      <th>Failed Date</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
+    <% @failed_charges.each do |charge| %>
+      <tr style="background-color: #FF0000">
         <td><%= charge.created %></td>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
         <td><%= charge.customer %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= number_to_currency charge.amount, presicion: 2 %></td>
+        <td><%= charge.updated_at.strftime('%F') %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
+<h1>Disputed Charges</h1>
 
-<%= link_to 'New Charge', new_charge_path %>
+<table>
+  <thead>
+    <tr>
+      <th>Charge</th>
+      <th>Customer</th>
+      <th>Amount</th>
+      <th>Disputed Date</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @disputed_charges.each do |charge| %>
+      <tr style="background-color: #FF5400">
+        <td><%= charge.created %></td>
+        <td><%= charge.customer %></td>
+        <td><%= number_to_currency charge.amount, presicion: 2 %></td>
+        <td><%= charge.updated_at.strftime('%F') %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h1>Successful Charges</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Charge</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @successful_charges.each do |charge| %>
+    <tr>
+      <td><%= charge.created %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
