include RSpec test fors charges/index view

--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Failed Charges</h1>
 
-<table>
+<table id="failed-charges">
   <thead>
     <tr>
       <th>Charge</th>
@@ -24,7 +24,7 @@
 
 <h1>Disputed Charges</h1>
 
-<table>
+<table id="disputed-charges">
   <thead>
     <tr>
       <th>Charge</th>
@@ -48,7 +48,7 @@
 
 <h1>Successful Charges</h1>
 
-<table>
+<table id="successful-charges">
   <thead>
     <tr>
       <th>Charge</th>
