--- a/source/app/views/charges/index.html.slim
+++ b/source/app/views/charges/index.html.slim
@@ -6,7 +6,7 @@ ul.charges_list.failed
 
 h1 Disputed Charges
 ul.charges_list.disputed
-  - @failed_charges.each do |charge|
+  - @disputed_charges.each do |charge|
     li
       | #{charge.customer.full_name}: #{charge.amount} #{charge.currency} at #{charge.created_at}
 
