--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,36 @@
  *= require_tree .
  *= require_self
  */
+
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab|Ubuntu:400italic,700italic,400,700);
+
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+$roboto-slab: 'Roboto Slab', serif;
+$ubuntu: 'Ubuntu', sans-serif;
+
+body {
+  font-family: $ubuntu;
+  font-weight: normal;
+  font-style: normal;
+  font-weight: 400;
+}
+
+h1, h2, h3, h4, h5, h6, input {
+  font-family: $roboto-slab;
+  font-weight: normal;
+}
+
+.container{
+  margin: 30px 0 20px 70px;
+
+  td {
+    padding: 5px 10px 5px 5px;
+  }
+}
+
+button {
+  font-family: $roboto-slab;
+  font-weight: bold;
+}
