--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,29 +1,31 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Customers</h1>
+<div class="container">
+  <h1>Listing Customers</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @customers.each do |customer| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= customer.firstname %></td>
-        <td><%= customer.lastname %></td>
-        <td><%= link_to 'Show', customer %></td>
-        <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
-        <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @customers.each do |customer| %>
+        <tr>
+          <td><%= customer.firstname %></td>
+          <td><%= customer.lastname %></td>
+          <td><%= link_to 'Show', customer %></td>
+          <td><%= link_to 'Edit', edit_customer_path(customer) %></td>
+          <td><%= link_to 'Destroy', customer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Customer', new_customer_path %>
+  <br>
+
+  <%= link_to 'New Customer', new_customer_path %>
+</div>
