--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Customer</h1>
+<div class="container">
 
-<%= render 'form' %>
+  <h1>New Customer</h1>
 
-<%= link_to 'Back', customers_path %>
+  <%= render 'form' %>
+
+  <%= link_to 'Back', customers_path %>
+
+</div>
