--- a/app/views/credit_card_charges/index.html.haml
+++ b/app/views/credit_card_charges/index.html.haml
@@ -1,19 +1,7 @@
 .container
 
   %div
-    %h1 Failed Charges
-    %table.table.failed
-      %thead
-        %tr
-          %th Customer Name
-          %th Amount
-          %th Date Charged
-      %tbody
-        - @failed.each do |charge|
-          %tr
-            %td
-              = charge.customer.name
-            %td
-              = charge.pretty_amount
-            %td
-              = charge.created_at
+    - %w{failed disputed successful}.each do |charge|
+      %h1
+        = "#{charge.capitalize} Charges"
+      = render partial: 'charge_list', locals: {:charges => eval("@#{charge}"), :css => charge}
