--- a/app/views/credit_card_charges/index.html.haml
+++ b/app/views/credit_card_charges/index.html.haml
@@ -1,7 +1,6 @@
 .container
-
   %div
     - %w{failed disputed successful}.each do |charge|
       %h1
         = "#{charge.capitalize} Charges"
-      = render partial: 'charge_list', locals: {:charges => eval("@#{charge}"), :css => charge}
+      = render partial: 'charge_list', locals: {charges: eval("@#{charge}"), css: charge}
