--- a/app/views/credit_card_charges/_charge_list.html.haml
+++ b/app/views/credit_card_charges/_charge_list.html.haml
@@ -6,7 +6,7 @@
       %th Date Charged
   %tbody
     - charges.each do |charge|
-      %tr
+      %tr.charge
         %td
           = charge.customer.name
         %td
