--- a/rails-test/app/views/shared/_navigation.html.erb
+++ b/rails-test/app/views/shared/_navigation.html.erb
@@ -12,8 +12,8 @@
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
-        <li><a href="#about">Customers</a></li>
-        <li><a href="#contact">Charges</a></li>
+        <li><%= link_to "Customers", customers_path %></li>
+        <li><%= link_to "Charges", charges_path %></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
