Decorate and style charges

--- a/source/app/views/charges/_charge.html.slim
+++ b/source/app/views/charges/_charge.html.slim
@@ -1,4 +1,4 @@
 tr
-  td= charge.customer_id
-  td= charge.amount
-  td= charge.updated_at
+  td= charge.customer_name
+  td= charge.amount_usd
+  td= charge.date
