Add features specs

--- a/source/app/views/charges/index.html.slim
+++ b/source/app/views/charges/index.html.slim
@@ -7,5 +7,5 @@ table.charges.disputed
   = render "charges", charges: disputed_charges
 
 h1 Successful Charges
-table.charges.successful
+table.charges.success
   = render "charges", charges: successful_charges
