--- a/source/simple/app/views/charges/index.html.erb
+++ b/source/simple/app/views/charges/index.html.erb
@@ -1,25 +1,8 @@
-<p id="notice"><%= notice %></p>
+<h1>Failed Charges</h1>
+<%= render 'failed_list' %>
 
-<h1>Listing Charges</h1>
+<h1>Disputed Charges</h1>
+<%= render 'disputed_list' %>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Charge', new_charge_path %>
+<h1>Successful Charges</h1>
+<%= render 'successful_list' %>
