Create charges index view

--- a/source/challenge/app/assets/stylesheets/application.css
+++ b/source/challenge/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+#failed-charges tr {
+	background: #FF0000;
+}
+
+#disputed-charges tr {
+	background: #FF5400;	
+}
