--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,28 +1,20 @@
-<h1>Listing charges</h1>
+<h1>Failed charges</h1>
 
-<table>
+<table class="charges-failed">
   <thead>
     <tr>
-      <th>Paid</th>
+      <th>Name</th>
       <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th>Customer</th>
-      <th colspan="3"></th>
+      <th>Date</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @charges.each do |charge| %>
+    <% @failed.each do |charge| %>
       <tr>
-        <td><%= charge.paid %></td>
+        <td><%= charge.customer.name %></td>
         <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= charge.created_at %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +22,50 @@
 
 <br>
 
-<%= link_to 'New Charge', new_charge_path %>
+<h1>Disputed charges</h1>
+
+<table class="charges-disputed">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Amount</th>
+    <th>Date</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @disputed.each do |charge| %>
+      <tr>
+        <td><%= charge.customer.name %></td>
+        <td><%= charge.amount %></td>
+        <td><%= charge.created_at %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<h1>Successful charges</h1>
+
+<table class="charges-successful">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Amount</th>
+    <th>Date</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @successful.each do |charge| %>
+      <tr>
+        <td><%= charge.customer.name %></td>
+        <td><%= charge.amount %></td>
+        <td><%= charge.created_at %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<br>
