--- a/source/app/assets/stylesheets/charges.css.scss
+++ b/source/app/assets/stylesheets/charges.css.scss
@@ -2,10 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.charges-failed {
+#charges-failed table {
   background-color: #FF0000;
 }
 
-.charges-disputed {
+#charges-disputed table {
   background-color: #FF5400;
 }
