--- a/source/app/views/credit_card_charges/index.html.erb
+++ b/source/app/views/credit_card_charges/index.html.erb
@@ -1,26 +1,20 @@
-<div id="failed_charges">
-  <h1>Failed Charges</h1>
-  <ul>
-    <% @failed_charges.each do |charge| %>
-        <li class="failed_charge"> <%= charge_li(charge) %> </li>
-    <% end %>
-  </ul>
-</div>
+<h1>Failed Charges</h1>
+<ul id="failed_charges">
+  <% @failed_charges.each do |charge| %>
+      <li> <%= charge_li(charge) %> </li>
+  <% end %>
+</ul>
 
-<div id="disputed_charges">
-  <h1>Disputed Charges</h1>
-  <ul>
-    <% @disputed_charges.each do |charge| %>
-        <li class="disputed_charge"> <%= charge_li(charge) %> </li>
-    <% end %>
-  </ul>
-</div>
+<h1>Disputed Charges</h1>
+<ul id="disputed_charges">
+  <% @disputed_charges.each do |charge| %>
+      <li> <%= charge_li(charge) %> </li>
+  <% end %>
+</ul>
 
-<div id="successful_charges">
-  <h1>Successful Charges</h1>
-  <ul>
-    <% @successful_charges.each do |charge| %>
-      <li class="successful_charge"> <%= charge_li(charge) %> </li>
-    <% end %>
-  </ul>
-</div>
+<h1>Successful Charges</h1>
+<ul id="successful_charges">
+  <% @successful_charges.each do |charge| %>
+    <li> <%= charge_li(charge) %> </li>
+  <% end %>
+</ul>
