--- a/source/credit_card_list/app/views/charges/index.html.erb
+++ b/source/credit_card_list/app/views/charges/index.html.erb
@@ -2,34 +2,71 @@
 
 <h1>Charges</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th>Customer</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<section>
+  <h2>Failed Charges</h2>
+  <div>
+    <table>
+      <thead>
+        <tr>
+          <th>Amount</th>
+          <th>Date</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer_id %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @failed_charges.each do |charge| %>
+          <tr>
+            <td><%= charge.amount %></td>
+            <td><%= charge.created_at.strftime("%B %d, %Y") %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</section>
 
-<br>
+<section>
+  <h2>Disputed Charges</h2>
+  <div>
+    <table>
+      <thead>
+        <tr>
+          <th>Amount</th>
+          <th>Date</th>
+        </tr>
+      </thead>
 
-<%= link_to 'New Charge', new_charge_path %>
+      <tbody>
+        <% @disputed_charges.each do |charge| %>
+          <tr>
+            <td><%= charge.amount %></td>
+            <td><%= charge.created_at.strftime("%B %d, %Y") %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</section>
+
+<section>
+  <h2>Successful Charges</h2>
+  <div>
+    <table>
+      <thead>
+        <tr>
+          <th>Amount</th>
+          <th>Date</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @successful_charges.each do |charge| %>
+          <tr>
+            <td><%= charge.amount %></td>
+            <td><%= charge.created_at.strftime("%B %d, %Y") %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</section>
