--- a/source/credit_card_list/app/views/charges/index.html.erb
+++ b/source/credit_card_list/app/views/charges/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Charges</h1>
 
-<section>
+<section id="failed">
   <h2>Failed Charges</h2>
   <div>
     <table>
@@ -25,7 +25,7 @@
   </div>
 </section>
 
-<section>
+<section id="disputed">
   <h2>Disputed Charges</h2>
   <div>
     <table>
@@ -48,7 +48,7 @@
   </div>
 </section>
 
-<section>
+<section id="successful">
   <h2>Successful Charges</h2>
   <div>
     <table>
