--- a/source/credit_card_charge/app/assets/stylesheets/charges.scss
+++ b/source/credit_card_charge/app/assets/stylesheets/charges.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the charges controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.highlight {
+    padding: 20px;
+    margin: 5px;
+    background-color: #f7f7f9;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+.failed { background: #FF0000 }
+.disputed { background: #FF5400 }
+.successful { background: #f7f7f9 }
