--- a/source/app/views/credit_card_charges/edit.html.erb
+++ b/source/app/views/credit_card_charges/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', credit_card_charge: @credit_card_charge %>
 
 <%= link_to 'Show', @credit_card_charge %> |
-<%= link_to 'Back', credit_card_charges_path %>
+<%= link_to 'Back', charges_path %>
