--- a/source/app/views/credit_card_charges/show.html.erb
+++ b/source/app/views/credit_card_charges/show.html.erb
@@ -21,4 +21,4 @@
 </p>
 
 <%= link_to 'Edit', edit_credit_card_charge_path(@credit_card_charge) %> |
-<%= link_to 'Back', credit_card_charges_path %>
+<%= link_to 'Back', charges_path %>
