--- a/source/app/views/credit_card_charges/index.html.erb
+++ b/source/app/views/credit_card_charges/index.html.erb
@@ -1,33 +1,43 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Credit Card Charges</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @credit_card_charges.each do |credit_card_charge| %>
-      <tr>
-        <td><%= credit_card_charge.paid %></td>
-        <td><%= credit_card_charge.amount %></td>
-        <td><%= credit_card_charge.currency %></td>
-        <td><%= credit_card_charge.refunded %></td>
-        <td><%= link_to 'Show', credit_card_charge %></td>
-        <td><%= link_to 'Edit', edit_credit_card_charge_path(credit_card_charge) %></td>
-        <td><%= link_to 'Destroy', credit_card_charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<section>
+  <h1>Failed Charges</h1>
+  <table id='failed'>
+    <% @failed.each do |charge| %>
+        <tr>
+          <td><%= charge.customer.full_name %></td>
+          <td><%= number_to_currency(charge.amount / 100.0) %></td>
+          <td><%= charge.created_at.strftime('%m.%d.%Y') %></td>
+        </tr>
     <% end %>
-  </tbody>
-</table>
+  </table>
+</section>
 
-<br>
+<section>
+  <h1>Disputed Charges</h1>
+  <table id='disputed'>
+    <% @disputed.each do |charge| %>
+        <tr>
+          <td><%= charge.customer.full_name %></td>
+          <td><%= number_to_currency(charge.amount / 100.0) %></td>
+          <td><%= charge.created_at.strftime('%m.%d.%Y') %></td>
+        </tr>
+    <% end %>
+  </table>
+</section>
 
-<%= link_to 'New Credit Card Charge', new_credit_card_charge_path %>
+<section>
+  <h1>Successful Charges</h1>
+  <table id='successful'>
+    <% @successful.each do |charge| %>
+        <tr>
+          <td><%= charge.customer.full_name %></td>
+          <td><%= number_to_currency(charge.amount / 100.0) %></td>
+          <td><%= charge.created_at.strftime('%m.%d.%Y') %></td>
+        </tr>
+    <% end %>
+  </table>
+</section>
+
+<%= link_to 'New Charge', new_credit_card_charge_path %> | <%= link_to 'Customers', customers_path %>
+
