--- a/source/app/views/credit_card_charges/new.html.erb
+++ b/source/app/views/credit_card_charges/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', credit_card_charge: @credit_card_charge %>
 
-<%= link_to 'Back', credit_card_charges_path %>
+<%= link_to 'Back', charges_path %>
