--- a/source/app/views/credit_card_charges/_form.html.erb
+++ b/source/app/views/credit_card_charges/_form.html.erb
@@ -11,6 +11,31 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label :paid %>
+    <%= form.check_box :paid, id: :credit_card_charge_paid %>
+  </div>
+
+  <div class="field">
+    <%= form.label :amount %>
+    <%= form.number_field :amount, id: :credit_card_charge_amount %>
+  </div>
+
+  <div class="field">
+    <%= form.label :currency %>
+    <%= form.text_field :currency, id: :credit_card_charge_currency %>
+  </div>
+
+  <div class="field">
+    <%= form.label :refunded %>
+    <%= form.check_box :refunded, id: :credit_card_charge_refunded %>
+  </div>
+
+  <div class="field">
+    <%= form.label :customer %>
+    <%= form.collection_select(:customer_id, Customer.all, :id, :full_name, :prompt => 'Select Customer') %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
