--- a/source/app/views/credit_card_charges/index.html.erb
+++ b/source/app/views/credit_card_charges/index.html.erb
@@ -1,25 +1,69 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Credit Card Charges</h1>
 
-<table>
+<h1>Failed Charges</h1>
+<table class='failed'>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>Customer Name</th>
+      <th>Date</th>
+      <th>Amount</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @credit_card_charges.each do |credit_card_charge| %>
+    <% @failed.each do |charge| %>
       <tr>
-        <td><%= link_to 'Show', credit_card_charge %></td>
-        <td><%= link_to 'Edit', edit_credit_card_charge_path(credit_card_charge) %></td>
-        <td><%= link_to 'Destroy', credit_card_charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= charge.customer.full_name %></td>
+        <td><%= charge.created_at %></td>
+        <td><%= number_to_currency(charge.amount / 100.0) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
+<h1>Disputed Charges</h1>
+<table class='disputed'>
+  <thead>
+    <tr>
+      <th>Customer Name</th>
+      <th>Date</th>
+      <th>Amount</th>
+    </tr>
+  </thead>
 
-<%= link_to 'New Credit Card Charge', new_credit_card_charge_path %>
+  <tbody>
+    <% @disputed.each do |charge| %>
+      <tr>
+        <td><%= charge.customer.full_name %></td>
+        <td><%= charge.created_at %></td>
+        <td><%= number_to_currency(charge.amount / 100.0) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h1>Successful Charges</h1>
+<table class='success'>
+  <thead>
+    <tr>
+      <th>Customer Name</th>
+      <th>Date</th>
+      <th>Amount</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @successful.each do |charge| %>
+      <tr>
+        <td><%= charge.customer.full_name %></td>
+        <td><%= charge.created_at %></td>
+        <td><%= number_to_currency(charge.amount / 100.0) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+<%= link_to 'New Charge', new_credit_card_charge_path %>
+
