Added charges table with required specs

--- a/source/app/assets/stylesheets/credit_card_charges.scss
+++ b/source/app/assets/stylesheets/credit_card_charges.scss
@@ -1,3 +1,32 @@
-// Place all the styles related to the CreditCardCharges controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.credit_card_charges table {
+  width: 100%;
+  margin-bottom: 2rem;
+
+  th {
+    text-align: left;
+  }
+
+  td {
+    padding: 0.5rem;
+  }
+}
+
+.failed_credit_card_charges {
+  tbody tr {
+    background-color: #ff0000;
+    color: #fff;
+  }
+}
+
+.disputed_credit_card_charges {
+  tbody tr {
+    background-color: #ff5400;
+    color: #fff;
+  }
+}
+
+.paid_credit_card_charges {
+  tbody tr {
+    background-color: #f9f9f9;
+  }
+}
