customer and credit card charge added

--- a/source/TestApp/app/assets/stylesheets/application.css
+++ b/source/TestApp/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+ table{
+     border-collapse: collapse;
+   }
+ table td{
+     border: 0px solid white;
+     padding: 2px 5px;
+   }
