--- a/source/TestApp/app/assets/stylesheets/application.css
+++ b/source/TestApp/app/assets/stylesheets/application.css
@@ -13,10 +13,17 @@
  *= require_tree .
  *= require_self
  */
- table{
-     border-collapse: collapse;
-   }
- table td{
-     border: 0px solid white;
-     padding: 2px 5px;
-   }
+
+table{
+  border-collapse: collapse;
+}
+table td{
+  border: 0px solid white;
+  padding: 2px 5px;
+}
+.failed tr > td {
+  background: #FF0000;
+}
+.disputed tr > td {
+  background: #FF5400;
+}
