--- a/source/TestApp/app/views/credit_card_charges/index.html.erb
+++ b/source/TestApp/app/views/credit_card_charges/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Failed Charges</h1>
-<table class="failed">
+<table id="failed">
   <thead>
     <tr>
       <th>Customer</th>
@@ -27,7 +27,7 @@
 <hr/>
 
 <h1>Disputed Charges</h1>
-<table class="disputed">
+<table id="disputed">
   <thead>
     <tr>
       <th>Customer</th>
@@ -51,8 +51,9 @@
   </tbody>
 </table>
 <hr/>
+
 <h1>Successful Charges</h1>
-<table>
+<table id="successful">
   <thead>
     <tr>
       <th>Customer</th>
