--- a/source/app/views/charges/index.html.haml
+++ b/source/app/views/charges/index.html.haml
@@ -1,2 +1,14 @@
-%h1 Charges#index
-%p Find me in app/views/charges/index.html.haml
+.charges
+  %h1 Charges list
+  .failed
+    %h1 Failed charges
+    - @failed_charges.each do |charge|
+      = render charge
+  .disputed
+    %h1 Disputed charges
+    - @disputed_charges.each do |charge|
+      = render charge
+  .successful
+    %h1 Successful charges
+    - @successful_charges.each do |charge|
+      = render charge
