--- a/source/app/views/credit_card_charges/index.html.erb
+++ b/source/app/views/credit_card_charges/index.html.erb
@@ -1,35 +1,65 @@
-<p id="notice"><%= notice %></p>
+<h1>Failed Charges</h1>
 
-<h1>Credit Card Charges</h1>
-
-<table>
+<table id="failed-charges">
   <thead>
     <tr>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
       <th>Customer</th>
-      <th colspan="3"></th>
+      <th>Amount</th>
+      <th>Date</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @credit_card_charges.each do |credit_card_charge| %>
+    <% @failed_charges.each do |charge| %>
       <tr>
-        <td><%= credit_card_charge.paid %></td>
-        <td><%= credit_card_charge.amount %></td>
-        <td><%= credit_card_charge.currency %></td>
-        <td><%= credit_card_charge.refunded %></td>
-        <td><%= credit_card_charge.customer %></td>
-        <td><%= link_to 'Show', credit_card_charge %></td>
-        <td><%= link_to 'Edit', edit_credit_card_charge_path(credit_card_charge) %></td>
-        <td><%= link_to 'Destroy', credit_card_charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= charge.customer %></td>
+        <td><%= charge.amount_in_cents %></td>
+        <td><%= charge.created_at.to_s(:db) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
+<h1>Disputed Charges</h1>
 
-<%= link_to 'New Credit Card Charge', new_credit_card_charge_path %>
+<table id="disputed-charges">
+  <thead>
+    <tr>
+      <th>Customer</th>
+      <th>Amount</th>
+      <th>Date</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @disputed_charges.each do |charge| %>
+      <tr>
+        <td><%= charge.customer %></td>
+        <td><%= charge.amount_in_cents %></td>
+        <td><%= charge.created_at.to_s(:db) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h1>Successful Charges</h1>
+
+<table id="successful-charges">
+  <thead>
+    <tr>
+      <th>Customer</th>
+      <th>Amount</th>
+      <th>Date</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @successful_charges.each do |charge| %>
+      <tr>
+        <td><%= charge.customer %></td>
+        <td><%= charge.amount_in_cents %></td>
+        <td><%= charge.created_at.to_s(:db) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
