--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,15 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Failed Charges</h1>
-<%= render 'charges', charges: @failed, row_class: '.failed' %>
+<%= render 'charges', charges: @failed, row_class: 'failed' %>
 <br>
 
 <h1>Disputed Charges</h1>
-<%= render 'charges', charges: @disputed, row_class: '.disputed' %>
+<%= render 'charges', charges: @disputed, row_class: 'disputed' %>
 <br>
 
 <h1>Successful Charges</h1>
-<%= render 'charges', charges: @successful, row_class: '.successful' %>
+<%= render 'charges', charges: @successful, row_class: 'successful' %>
+
 <br>
 
 <%= link_to 'New Charge', new_charge_path %>
