--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -31,7 +31,7 @@
     <tr>
       <th>Customer name</th>
       <th>Amount</th>
-      <th>Created at</th>
+      <th>Successful at</th>
     </tr>
   </thead>
 
