--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Failed Charges</h1>
-<h1>Disputed Charges</h1>
-<h1>Successful Charges</h1>
+<%= render 'charges', list_header: 'Failed Charges', charges: @failed, css_class: 'failed' %>
+<%= render 'charges', list_header: 'Disputed Charges', charges: @disputed, css_class: 'disputed' %>
+<%= render 'charges', list_header: 'Successful Charges', charges: @successful, css_class: 'successful' %>
