--- a/source/app/assets/stylesheets/charges.scss
+++ b/source/app/assets/stylesheets/charges.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Charges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+tr.failed {
+  background: #FF0000;
+}
+
+tr.disputed {
+  background: #FF5400;
+}
